feature/Transformador-Basico, funcionamento de botao

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -81,3 +81,9 @@ h1 {
 .rwd-table th, .rwd-table td:before {
   color: #dd5;
 }
+
+.rwd-select {
+  background: #34495E;
+  color: #fff;
+  overflow: hidden;
+}
